<resources>

    <!--Les string pour la connexion et l'inscription-->
    <string name="app_name">UMSA</string>
    <string name="email">E-MAIL</string>
    <string name="password">MOT DE PASSE</string>
    <string name="Connect">Connexion</string>
    <string name="not_registered">CRÉER UN COMPTE</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="confirmPassword">CONFIRMATION</string>
    <string name="already_registered">Déjà inscrit ? Connectez-vous ici</string>
    <string name="phone">NUMERO DE TELEPHONE</string>
    <string name="register">INSCRIPTION</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="logout">Deconnexion</string>
    <string name="test">test</string>
    <string name="coverNewApp">"Ajout d'une nouvelle application"</string>
    <string name="newAppliName">NOM DE L\'APPLICATION</string>
    <string name="addNewAppInDatabase">Ajouter une application</string>
    <string name="addAppInData">ajouter</string>
    <string name="reload">actualiser</string>
    <string name="nameAccount">NOM DU COMPTE</string>

</resources>
