<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Login_and_Registration.AccueilActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/purpleColor">

    <TextView
        android:id="@+id/textView_bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bienvenue"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/scrollView_app"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/button_reload"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/reload"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_createApp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/addNewAppInDatabase"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_loggout"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/logout"
        android:textSize="15sp" />


</LinearLayout>
