<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Login_and_Registration.RegistrationActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="205dp"
        android:layout_height="153dp"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/icone" />

    <EditText
        android:id="@+id/editText_emailRegister"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:textColor="@color/purpleColor"
        android:textColorHint="@color/pinkBackground"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText_passwordRegister"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textColor="@color/purpleColor"
        android:textColorHint="@color/pinkBackground"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText_confirmPassword"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textColor="@color/purpleColor"
        android:textColorHint="@color/pinkBackground"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="S'inscrire" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/already_registered"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
