<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Login_and_Registration.CreateAccountActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ajout d'un nouveau compte"
        android:textSize="24dp"
        android:layout_marginTop="200dp"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="98dp"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/editText_accountName"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/nameAccount"
        android:textColorHint="@color/pinkBackground"
        android:background="#ffffff"
        android:textAlignment="center"
        android:textColor="@color/purpleColor">
    </EditText>

    <EditText
        android:id="@+id/editText_passwordAccount"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/pinkBackground"
        android:background="#ffffff"
        android:textAlignment="center"
        android:textColor="@color/purpleColor">
    </EditText>

    <Button
        android:id="@+id/button_createAccount2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/addAppInData" />

</LinearLayout>
